[gd_scene load_steps=15 format=3 uid="uid://bk36qnaychwcp"]

[ext_resource type="Script" uid="uid://uxf17k7gqkhp" path="res://UI/scripts/pauseArea.gd" id="1_ebnym"]
[ext_resource type="Texture2D" uid="uid://cb30fh0wha4c0" path="res://UI/assets/icons/keyboard_escape.png" id="2_g8xcx"]
[ext_resource type="PackedScene" uid="uid://dwisfevma3f57" path="res://UI/scenes/Pause/StatusPage.tscn" id="3_op7kn"]
[ext_resource type="Texture2D" uid="uid://3i27qjfhqkw0" path="res://UI/assets/icons/scratch.png" id="3_p0gpf"]
[ext_resource type="Texture2D" uid="uid://das5clqw0bcfd" path="res://UI/assets/icons/bone.png" id="4_awjei"]
[ext_resource type="PackedScene" uid="uid://bo8xoqaotlp3t" path="res://UI/scenes/Pause/CompanionPage.tscn" id="4_hdyll"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gik4s"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6v7d"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3w35d"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ebvg"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ntah"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tvws2"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ry3dd"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o0sh4"]
bg_color = Color(0, 0, 0, 1)

[node name="PauseArea" type="PanelContainer"]
process_mode = 3
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ebnym")

[node name="MainMenu" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PauseOptions" type="PanelContainer" parent="MainMenu"]
custom_minimum_size = Vector2(725, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gik4s")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/PauseOptions"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="MainMenuTitle" type="Label" parent="MainMenu/PauseOptions/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "
   Main Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/PauseOptions/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Status" type="Button" parent="MainMenu/PauseOptions/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_v6v7d")
theme_override_styles/normal = SubResource("StyleBoxFlat_3w35d")
text = "                    Status"
alignment = 0

[node name="Companion" type="Button" parent="MainMenu/PauseOptions/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_4ebvg")
theme_override_styles/normal = SubResource("StyleBoxFlat_3ntah")
text = "                    Companion"
alignment = 0

[node name="Exit" type="Button" parent="MainMenu/PauseOptions/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_tvws2")
theme_override_styles/normal = SubResource("StyleBoxFlat_ry3dd")
text = "                    Exit Game"
alignment = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="MainMenu/PauseOptions"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/PauseOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenu/PauseOptions/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(56, 48)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_g8xcx")

[node name="Label" type="Label" parent="MainMenu/PauseOptions/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 32
text = "Close"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/PauseOptions/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="CenterArea" type="PanelContainer" parent="MainMenu"]
visible = false
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(900, 0)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="MainMenu"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_o0sh4")

[node name="UpgradeMaterials" type="VBoxContainer" parent="MainMenu/PanelContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/PanelContainer2/UpgradeMaterials"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenu/PanelContainer2/UpgradeMaterials/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_p0gpf")

[node name="MarkCount" type="Label" parent="MainMenu/PanelContainer2/UpgradeMaterials/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 32
text = "0"
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MainMenu/PanelContainer2/UpgradeMaterials"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 126

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenu/PanelContainer2/UpgradeMaterials/HBoxContainer2"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("4_awjei")

[node name="TreatCount" type="Label" parent="MainMenu/PanelContainer2/UpgradeMaterials/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 32
text = "0"
vertical_alignment = 1

[node name="StatusPage" parent="." instance=ExtResource("3_op7kn")]
visible = false
layout_mode = 2

[node name="CompanionPage" parent="." instance=ExtResource("4_hdyll")]
visible = false
layout_mode = 2

[connection signal="button_down" from="MainMenu/PauseOptions/VBoxContainer/VBoxContainer/Status" to="." method="_on_status_button_down"]
[connection signal="button_down" from="MainMenu/PauseOptions/VBoxContainer/VBoxContainer/Companion" to="." method="_on_companion_button_down"]
[connection signal="button_down" from="MainMenu/PauseOptions/VBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_button_down"]
